# spectrum-esp32

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  spectrum_dev_spec_v2.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  camera_usb.c  camera_usb.h  idf_component.yml  imu_i2c.c  imu_i2c.h  net.c  net.h  spectro_uart.c  spectro_uart.h  state.c  state.h  tinyf_uart.c  tinyf_uart.h  webserver.c  webserver.h
main/web/: index.html
